# jma-feed

./: .appveyor.yml  .isort.cfg  .pylint.ini  CHANGELOG.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  scent.py
docs/: index.md
docs/about/: contributing.md  license.md
jma_feed/: __init__.py  __main__.py  feed.py  report.py  xml.py
jma_feed/tests/: conftest.py  test_feed.py  test_report.py  test_utils.py
jma_feed/tests/resources/: sample_mete1.xml  sample_mete2.xml  sample_regular.xml  sample_seis1.xml  sample_volc1.xml
tests/: conftest.py  test_cli.py
